syntax = "proto3";

option go_package = "./proto";

package grpc_service;

service GrpcService{
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServerStream(NamesList) returns (stream HelloResponse);
    rpc SayHelloClientStream(stream HelloReq) returns (MessageList);
    rpc SayHelloBidirectionalStream(stream HelloReq) returns (stream HelloResponse);
}

message NoParam{};

message HelloResponse{
    string message=1;
};

message HelloReq{
    string name=1;
}

message NamesList{
    repeated string name=1;
}

message MessageList{
    repeated string message=1;
}


